fix collapse toggle location

--- a/src/applications/WorldBuilder/WBHeader.scss
+++ b/src/applications/WorldBuilder/WBHeader.scss
@@ -19,7 +19,7 @@
       float: left;
       position: absolute;
       top: 4px;
-      right: -32px;
+      right: -36px;
       font-size: 20px;
       width: 30px;
       transition: right 0.5s;
