--- a/src/applications/WorldBuilder/WorldBuilder.scss
+++ b/src/applications/WorldBuilder/WorldBuilder.scss
@@ -46,8 +46,9 @@
         width: 0px;
       }
       #fwb-sidebar-toggle {
-        right: 0px;
+        right: 6px;
         top: 4px;
+        width: auto;
       }
     }
 
